app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base
spec:
  selector:
    matchLabels:
      app: base
  template:
    metadata:
      labels:
        app: base
    spec:
      containers:
      - name: base
        image: gitlab.pyaillet.tech:5050/nc-kubernetes/base:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: config
